--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,14 @@
 <ul>
     {{ macro.displayMovieList(now_showing)}}
 </ul>
+{% block content %}
 
+<div class="container">
+    <form>
+        <input type="text" name="movie_query" placeholder="Search for a Movie" class="form-control">
+        <input type="submit"  value="Submit" class="btn btn-default">
+    </form>
+
+</div>
 
 {% endblock%}
